--- a/static_page/templates/static_page/registrations/forget_pwd.html
+++ b/static_page/templates/static_page/registrations/forget_pwd.html
@@ -11,26 +11,13 @@
                   <h2 class="text-center">Forgot Password?</h2>
                   <p>You can reset your password here.</p>
                   <div class="panel-body">
-
-                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
-
-                      <div class="form-group">
-                        <label for="exampleDropdownFormPassword1">Old Password</label>
-                        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleDropdownFormPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleDropdownFormPassword1">Confirm Password</label>
-                        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-                      </div>
-                      <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
-                      </div>
-
-                      <input type="hidden" class="hide" name="token" id="token" value="">
+                    {% if error_message %}
+                      {{ error_message }}
+                    {% endif %}
+                    <form action="" id="register-form" class="form">
+                      {% csrf_token %}
+                      {{ form.as_p }}
+                      <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
                     </form>
 
                   </div>
