--- a/static_page/templates/static_page/registrations/sign_in.html
+++ b/static_page/templates/static_page/registrations/sign_in.html
@@ -2,24 +2,18 @@
 
 {% block content %}
   <div class="container">
-    <form action="{% url 'profile' %}" class="px-4 py-3">
+    {% if error_message %}
+      {{ error_message }}
+    {% endif %}
+    <form action="" class="px-4 py-3">
+      {% csrf_token %}
       <div class="form-group">
-        <label for="exampleDropdownFormEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+        {{ form.as_p }}
       </div>
-      <div class="form-group">
-        <label for="exampleDropdownFormPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-      </div>
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="dropdownCheck">
-        <label class="form-check-label" for="dropdownCheck">
-          Remember me
-        </label>
-      </div>
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <input type="submit" class="btn btn-primary" value="Sign In" />
     </form>
-    <div class="dropdown-divider"></div>
+
+
     <a class="dropdown-item" href="{% url 'sign_up' %}">New around here? Sign up</a>
     <a class="dropdown-item" href="{% url 'forget_pwd' %}">Forgot password?</a>
   </div>
