--- a/static_page/templates/static_page/registrations/sign_up.html
+++ b/static_page/templates/static_page/registrations/sign_up.html
@@ -2,24 +2,16 @@
 
 {% block content %}
   <div class="container">
-    <form action="{% url 'profile' %}" class="px-4 py-3">
+    {% if error_message %}
+      {{ error_message }}
+    {% endif %}
+    <form action="" class="px-4 py-3">
+      {% csrf_token %}
       <div class="form-group">
-        <label for="exampleDropdownFormEmail1">Username</label>
-        <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+        {{ form.as_p }}
       </div>
-      <div class="form-group">
-        <label for="exampleDropdownFormEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-      </div>
-      <div class="form-group">
-        <label for="exampleDropdownFormPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-      </div>
-      <div class="form-group">
-        <label for="exampleDropdownFormPassword1">Confirm Password</label>
-        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-      </div>
-      <button type="submit" class="btn btn-primary">Sign up</button>
+      <input type="submit" class="btn btn-primary" value="Sign In" />
     </form>
+
   </div>
 {% endblock %}
