--- a/static_page/templates/static_page/registrations/sign_in.html
+++ b/static_page/templates/static_page/registrations/sign_in.html
@@ -2,19 +2,33 @@
 
 {% block content %}
   <div class="container">
-    {% if error_message %}
-      {{ error_message }}
-    {% endif %}
-    <form action="" class="px-4 py-3">
-      {% csrf_token %}
-      <div class="form-group">
-        {{ form.as_p }}
+    <div class="row">
+      {% if error_message %}
+        {{ error_message }}
+      {% endif %}
+      <div class="col-md-6 mx-auto">
+        <!-- form card login -->
+          <div class="card rounded-0">
+            <div class="card-header">
+              <h3 class="mb-0">Sign in</h3>
+            </div>
+            <div class="card-body">
+              <form class="px-4 py-3" method="POST">
+                {% csrf_token %}
+                  <div class="form-group">
+                    {{ form.as_p }}
+            </div>
+            <input type="submit" class="btn btn-primary float-right" value="Sign In" />
+            </form>
+
+            <a class="dropdown-item" href="{% url 'sign_up' %}">New around here? Sign up</a>
+            <a class="dropdown-item" href="{% url 'forget_pwd' %}">Forgot password?</a><br>
+          </div>
+        <!--/card-block-->
       </div>
-      <input type="submit" class="btn btn-primary" value="Sign In" />
-    </form>
-
-
-    <a class="dropdown-item" href="{% url 'sign_up' %}">New around here? Sign up</a>
-    <a class="dropdown-item" href="{% url 'forget_pwd' %}">Forgot password?</a>
+      <!-- /form card login -->
+    </div>
+  </div>
+  <!--/row-->
   </div>
 {% endblock %}
