--- a/static_page/templates/base.html
+++ b/static_page/templates/base.html
@@ -4,19 +4,25 @@
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>{% block title %} {% endblock %}</title>
+	{% load fontawesome %}
+	{% fontawesome_stylesheet %}
+
 	{# Load the tag library #}
 	{% load bootstrap4 %}
+
 	{# Load CSS and JavaScript #}
 	{% bootstrap_css %}
 	{% bootstrap_javascript jquery='full' %}
-	{# Display django.contrib.messages as Bootstrap alerts #}
-	{% bootstrap_messages %}
 
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'static_page/style.css' %}">
+
 </head>
 <body>
 	{% include './static_page/header.html' %}
+
+	{# Display django.contrib.messages as Bootstrap alerts #}
+	{% bootstrap_messages %}
 
 	{% block content %} {% endblock %}
 
