--- a/static_page/templates/static_page/registrations/sign_in.html
+++ b/static_page/templates/static_page/registrations/sign_in.html
@@ -11,13 +11,48 @@
               <h3 class="mb-0">Sign in</h3>
             </div>
             <div class="card-body">
-              <form class="px-4 py-3" method="POST">
+              {% load widget_tweaks %}
+              <form class="px-4 py-3" method="POST" novalidate>
                 {% csrf_token %}
-                <div class="form-group">
-                  {{ form.as_p }}
-                  <input type="submit" class="btn btn-primary" value="Sign In" />
-                </div>
 
+                {% for hidden_field in form.hidden_fields %}
+                  {{ hidden_field }}
+                {% endfor %}
+
+                {% if form.non_field_errors %}
+                  <div class="alert alert-danger" role="alert">
+                    {% for error in form.non_field_errors %}
+                      {{ error }}
+                    {% endfor %}
+                  </div>
+                {% endif %}
+
+                {% for field in form.visible_fields %}
+                  <div class="form-group">
+                    {{ field.label_tag }}
+
+                    {% if form.is_bound %}
+                      {% if field.errors %}
+                        {% render_field field class="form-control is-invalid" %}
+                        {% for error in field.errors %}
+                          <div class="invalid-feedback">
+                            {{ error }}
+                          </div>
+                        {% endfor %}
+                      {% else %}
+                        {% render_field field class="form-control is-valid" %}
+                      {% endif %}
+                    {% else %}
+                      {% render_field field class="form-control" %}
+                    {% endif %}
+
+                    {% if field.help_text %}
+                      <small class="form-text text-muted">{{ field.help_text }}</small>
+                    {% endif %}
+                  </div>
+                {% endfor %}
+
+                <input type="submit" class="btn btn-primary" value="Sign In" />
             </form>
 
             <a class="dropdown-item text-center" href="{% url 'forget_pwd' %}">Forgot password?</a><br>
