--- a/static_page/templates/static_page/registrations/sign_up.html
+++ b/static_page/templates/static_page/registrations/sign_up.html
@@ -10,10 +10,46 @@
               <h3 class="mb-0">Sign up</h3>
             </div>
             <div class="card-body">
-              <form method="post" class="px-4 py-3">
+              {% load widget_tweaks %}
+              <form method="post" class="px-4 py-3" novalidate>
                 {% csrf_token %}
+
+                {% for hidden_field in form.hidden_fields %}
+                  {{ hidden_field }}
+                {% endfor %}
+
+                {% if form.non_field_errors %}
+                  <div class="alert alert-danger" role="alert">
+                    {% for error in form.non_field_errors %}
+                      {{ error }}
+                    {% endfor %}
+                  </div>
+                {% endif %}
+
+                {% for field in form.visible_fields %}
                   <div class="form-group">
-                    {{ form.as_p }}
+                    {{ field.label_tag }}
+
+                    {% if form.is_bound %}
+                      {% if field.errors %}
+                        {% render_field field class="form-control is-invalid" %}
+                        {% for error in field.errors %}
+                          <div class="invalid-feedback">
+                            {{ error }}
+                          </div>
+                        {% endfor %}
+                      {% else %}
+                        {% render_field field class="form-control is-valid" %}
+                      {% endif %}
+                    {% else %}
+                      {% render_field field class="form-control" %}
+                    {% endif %}
+
+                    {% if field.help_text %}
+                      <small class="form-text text-muted">{{ field.help_text }}</small>
+                    {% endif %}
+                  </div>
+                {% endfor %}
             </div>
             <input type="submit" class="btn btn-primary float-right" value="Sign up" />
             </form>
